Fix sidebar on small height screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,8 +125,8 @@
   --default-transition-duration: 500ms;
 }
 
-@custom-variant h-max-sm {
-  @media (height < 32rem) {
+@custom-variant h-max-md {
+  @media (height < 48rem) {
     & {
       @slot;
     }
